WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202070
Regression(iOS 13) web views do not deal properly with their window's UIScene changing
https://bugs.webkit.org/show_bug.cgi?id=202070
Summary
Regression(iOS 13) web views do not deal properly with their window's UIScene...
Chris Dumez
Reported
2019-09-20 19:41:14 PDT
Web views do not deal properly with their window's UIScene changing. If a Safari window is in the background for 1 minute, its UIScene will be detached and the window will get a new UIScene if the user later switches to this window. Our web views listen to UIScene notifications to determine their visibility and currently stop receiving visibility updates once the window’s UIScene has changed. This causes view freezes because our WebContent process does not know its view is visible and keeps its layer tree frozen.
Attachments
Patch
(4.53 KB, patch)
2019-09-20 19:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-20 19:41:31 PDT
<
rdar://problem/55580699
>
Chris Dumez
Comment 2
2019-09-20 19:46:03 PDT
Created
attachment 379304
[details]
Patch
WebKit Commit Bot
Comment 3
2019-09-21 16:13:53 PDT
Comment on
attachment 379304
[details]
Patch Clearing flags on attachment: 379304 Committed
r250187
: <
https://trac.webkit.org/changeset/250187
>
WebKit Commit Bot
Comment 4
2019-09-21 16:13:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug